--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:th="http://www.thymeleaf.org">
+      xmlns:th="http://www.thymeleaf.org" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <title>FilmLibrary</title>
 </head>
 <body>
-<p th:text="HI"></p>
+<div sec:authorize="isAuthenticated()">
+    <form th:action="@{/logout}" method="post">
+        <input type="submit" value="Sign Out"/>
+    </form>
+</div>
+<p>Hi, look at this films</p>
+<a href="/films">Library</a>
 </body>
 </html>
