--- a/src/main/resources/templates/films.html
+++ b/src/main/resources/templates/films.html
@@ -1,5 +1,9 @@
 <!--suppress HtmlFormInputWithoutLabel -->
 <html xmlns:th="http://thymeleaf.org">
+<head>
+    <meta charset="UTF-8">
+    <title>Film Library</title>
+</head>
 <body>
 <div>
     <form th:action="@{/logout}" method="post">
@@ -9,7 +13,14 @@
 <div>
     <form method="post" th:action="@{/films}" th:object="${film}">
         <input type="text" name="title" placeholder="Input film title">
-        <input type="text" name="genre" placeholder="Input genre">
+        <ul>
+            <li th:each="genre:${genres}">
+                <div>
+                    <input type="checkbox" th:field="*{genre}" th:value="${genre}">
+                    <label th:text="${genre}"></label>
+                </div>
+            </li>
+        </ul>
         <button type="submit">Create Film</button>
     </form>
 </div>
