--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -11,7 +11,9 @@
   <div><label> User Name : <input type="text" name="username"/> </label></div>
   <div><label> Password: <input type="password" name="password"/> </label></div>
   <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
-  <div><input type="submit" value="Sign In"/></div>
+  <div>
+    <input type="submit" value="Sign In"/>
+  </div>
 </form>
 </body>
 </html>
