--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -7,12 +7,12 @@
 <div th:if="${param.message}">
   Invalid username and password.
 </div>
-<form method="post" th:action="@{/registration}">
+<form th:action="@{/registration}" method="post" >
   <div><label> User Name : <input type="text" name="username"/> </label></div>
   <div><label> Password: <input type="password" name="password"/> </label></div>
   <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
   <div>
-    <input type="submit" value="Sign In"/>
+    <input type="submit" value="Create account"/>
   </div>
 </form>
 </body>
