Added admin role and admin panel for users

--- a/src/main/resources/templates/common.html
+++ b/src/main/resources/templates/common.html
@@ -4,6 +4,9 @@
             <form th:action="@{/logout}" method="post">
                 <input type="submit" value="Logout"/>
             </form>
+            <form th:action="@{/users}" method="get">
+                <input type="submit" value="User list"/>
+            </form>
         </div>
     </body>
 </html>
