--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,20 +1,40 @@
+<!--suppress HtmlFormInputWithoutLabel -->
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
+<html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
   <title>Login page</title>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+  <!-- Bootstrap CSS -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+        integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
 </head>
 <body>
-<div th:if="${param.error}">
+<div class="ml-3" th:if="${param.error}">
   Invalid username and password.
 </div>
-<div th:if="${param.logout}">
+<div class="ml-3 mt-1" th:if="${param.logout}">
   You have been logged out.
 </div>
 <form th:action="@{/login}" method="post">
-  <div><label> User Name : <input type="text" name="username"/> </label></div>
-  <div><label> Password: <input type="password" name="password"/> </label></div>
-  <div><input type="submit" value="Sign In"/></div>
+  <div class="form-group">
+    <label class="col-sm-2 col-form-label"> Username: </label>
+    <div class="col-sm-2">
+      <input type="text" class="form-control" name="username" placeholder="Enter username"/>
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="col-sm-2 col-form-label"> Password: </label>
+    <div class="col-sm-2">
+      <input type="password" class="form-control" name="password" placeholder="Enter password"/>
+    </div>
+  </div>
+  <div class="ml-3 row">
+    <button class="btn btn-primary" type="submit">Log in</button>
+    <a class="ml-3 mt-1" href="/registration">Registration</a>
+  </div>
 </form>
-<a href="/registration">Registration</a>
 </body>
 </html>
