--- a/src/main/resources/templates/films.html
+++ b/src/main/resources/templates/films.html
@@ -2,14 +2,14 @@
 <!DOCTYPE html>
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
-              integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-              crossorigin="anonymous">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.1.3/dist/css/bootstrap.min.css"
+          integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+          crossorigin="anonymous">
     <meta charset="UTF-8">
     <title>Film Library</title>
 </head>
@@ -22,7 +22,7 @@
     </button>
 </p>
 <div class="collapse m-3" id="createfilm" sec:authorize="hasAuthority('ADMIN')">
-    <form method="post" th:action="@{/films}" th:object="${film}">
+    <form method="post" th:action="@{/films/add}" th:object="${film}">
         <input type="text" name="title" placeholder="Input film title">
         <ul>
             <li th:each="genre:${genres}">
@@ -35,20 +35,35 @@
         <button type="submit">Create Film</button>
     </form>
 </div>
-
-<div>
-    <table>
-        <thead>
+<div style="width:50%">
+    <table class="table table-bordered table-responsive-xl">
+        <thead class="thead-dark">
         <tr>
-            <th> Title </th>
-            <th> Genres </th>
+            <th scope="col"> Title </th>
+            <th scope="col"> Genres </th>
+            <th scope="col"> Rating </th>
+            <th scope="col"></th>
         </tr>
         </thead>
         <tbody>
-
-        <tr th:each="film : ${films}">
+        <tr th:each="film : ${films}"
+            th:style="${film.getUsers().contains(user) ? 'background-color:orange;' : _}">
             <td><a th:href="@{/films/__${film.id}__}" th:text="${film.title}"> Title </a></td>
             <td><span th:text="${film.genre}"> Genre </span></td>
+            <td><span th:text="${film.rating}"> Rating </span></td>
+            <td>
+                <form method="post"
+                      th:action="@{/films/changeRating/__${film.id}__/__${user.getId()}__}">
+                    <select th:field="*{film.rating}" class="form-select">
+                        <option th:each="i : ${#numbers.sequence(1, 5)}" th:value="${i}" th:text="${i}">
+                        </option>
+                    </select>
+                    <button class="btn btn-primary btn-sm" type="submit">Submit rating</button>
+                </form>
+                <form method="get" th:action="@{/films/deleteRating/__${film.id}__/__${user.getId()}__}">
+                    <button class="btn btn-primary btn-sm" type="submit">Delete rating</button>
+                </form>
+            </td>
         </tr>
         </tbody>
     </table>
