--- a/src/main/resources/templates/artistPage.html
+++ b/src/main/resources/templates/artistPage.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:sec="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="UTF-8">
-    <title th:text="${film.title}"></title>
+    <title th:text="${artist.name}"></title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -14,12 +14,16 @@
 <body>
 <div th:insert="fragments/navbar :: navbar"></div>
 
-<h1 th:text="${film.title} + ' (' + ${film.yearOfCreation} + ')'"></h1>
-<h3 th:text="'Genre: ' + ${genres}"></h3>
+<div th:object="${artist}">
+    <h1 th:text="*{name}"></h1>
+    <a th:href="@{/artists/delete?id=__${artist.id}__}" sec:authorize="hasAuthority('ADMIN')"
+       th:text="'delete'"></a>
+</div>
 <div>
     <ul>
-        <li th:each="artist:${artists}">
-            <a th:href="@{/artists/artist?id=__${artist.id}__}" th:text="${artist.name}"></a>
+        <li th:each="film :${films}">
+            <a th:href="@{/films/film?id=__${film.id}__}"
+               th:text="${film.title} + ' (' + ${film.yearOfCreation} + ')'"></a>
         </li>
     </ul>
 </div>
