--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -17,7 +17,7 @@
 <form th:action="@{/registration}" method="post" >
   <div><label> User Name : <input type="text" name="username"/> </label></div>
   <div><label> Password: <input type="password" name="password"/> </label></div>
-  <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />
+<!--  <input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" />-->
   <div>
     <input type="submit" value="Create account"/>
   </div>
