--- a/frontend/src/styles/Films.css
+++ b/frontend/src/styles/Films.css
@@ -4,8 +4,10 @@
     margin-top: 30px;
 }
 
-.Film-table{
-    background-color: rgb(73, 51, 150)00;
-    width: 90%;
-    margin: auto;
+.UserRating{
+    float: none;
+}
+
+.Dropdown{
+    float: right;
 }
